feat(notes): Update style and edit text.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 
 <body>
 <pre class="content">
-    <span class="nbk_directive"><a href="/"># Notes</a></span>
-    <span class="nbk_comment">Saeran Vasanthakumar</span>
+    <span class="nbk_title"><a href="/">Notes</a></span>
+    <span class="nbk_comment"></span>
+    <span class="nbk_comment">by Saeran Vasanthakumar</span>
     <span class="_doc_sep">---</span>
     
     
@@ -20,7 +21,6 @@
     <span class="_doc_sep">---</span>
     <span class="nbk_grey">email: saeranv @ gmail dot com</span>
     <span class="nbk_grey">git: <a href="https://github.com/saeranv/" style="color:grey;">github.com/saeranv</a></span>
-    <span class="nbk_grey">linkedin: <a href="https://www.linkedin.com/in/saeranvasanthakumar/" style="color:grey;">linkedin.com/in/saeranvasanthakumar/</a></span>
 </body>
 
 </pre>
