feat(pages): Correction to dynmod.

--- a/200923_dynmod/index.html
+++ b/200923_dynmod/index.html
@@ -51,8 +51,7 @@
     shoe-box models with just a linear regression. I was able to get some decent results,
     but quickly found that it suffered when trying to account for the (nonlinear) impact
     of radiation. That was in March, and since then I’ve been busy moving cities, and
-    switching jobs to properly revisit the problem - although I spend an inordinate
-    amount of my day thinking about the issue.
+    switching jobs to properly revisit the problem.
     
     Luckily, it looks like I might have an excuse to revisit the problem soon. The
     purpose of this note was to revisit the problem domain and gather my constantly-
