feat(pages): Change linear modeling.

--- a/200922_regression_norm_eqn/index.html
+++ b/200922_regression_norm_eqn/index.html
@@ -34,7 +34,7 @@
     <span class="nbk_directive"><i>20/09/22 - Linear Regression as Geometric Projection [Draft]</i></span>
     <!-- autoescape off to allow images. Debug why safe filter isn't working -->
     
-    Note: This note is still a draft.
+    Warning: This is a draft.
     
     In the context of regression, the normal equation \(B = (X.T X)-1 X.T y\) is used to
     calculate regression coefficients t\hat minimize the sum of square differences
