chore(pages): update.

--- a/210215_heat_conduction_soln_pt1/index.html
+++ b/210215_heat_conduction_soln_pt1/index.html
@@ -88,9 +88,7 @@ Which illustrates familiar relationship between the ratio of total temperature, 
 \end{align}
 \)
 
-<b>References</b>
-
-1. Bassols, Xavier Botey. "The use of heat transfer functions for heat flow computation through multilayer walls". Masters Thesis. 2013.
+<b>Footnotes</b>
 
 2. Conduction Through The Walls. <a href="https://bigladdersoftware.com/epx/docs/9-0/engineering-reference/conduction-through-the-walls.html#conduction-through-the-walls">EnergyPlus Engineering Reference -- EnergyPlus 9.0</a>
 <!-- autoescape off to allow images. Debug why safe filter isn't working
