--- a/210517_heat_conduction_soln_pt2/index.html
+++ b/210517_heat_conduction_soln_pt2/index.html
@@ -34,7 +34,7 @@
 
 <span class="nbk_directive"><i>21/05/17 - Solving Heat Conduction Part II</i></span>
 
-Continuing from my previous post, I worked out 6 additional heat conduction solvers. The methods were primarily referenced from Cengel's[1] <i>Heat and Mass Transfer</i> chapters on numerical methods. I started with transient heat conduction, in 1D, 2D, initally implemented with for loops and then rewritten as efficient matrix operations. Illustrated below are just the matrix version, illustrated for four time steps:
+Continuing from my previous post, I worked out 6 additional heat conduction solvers. The methods were primarily referenced from Cengel's[1] <i>Heat and Mass Transfer</i> chapters on numerical methods[1]. I started with transient heat conduction, in 1D, 2D, initally implemented with for loops and then rewritten as efficient matrix operations. Illustrated below are just the matrix version, illustrated for four time steps:
 
 <img src="/static/images/210517_heat_conduction/1d_transient.PNG" alt="" width="400">
 
@@ -75,7 +75,7 @@ This, is a much more elegant way of solving for interior temperatures then the o
 <img src="/static/images/210517_heat_conduction/2d_steady.PNG" alt="" width="400">
 
 
-<b>References</b>
+<b>Footnotes</b>
 
 1. Cengel, Yunus A., and Afhsin J. Ghajar. Heat and Mass Transfer: Fundamentals & Applications. New York, 2011. Chapter 5.
 <!-- autoescape off to allow images. Debug why safe filter isn't working
