feat(chore): quick update.

--- a/210518_creativity_bottleneck_in_dl/index.html
+++ b/210518_creativity_bottleneck_in_dl/index.html
@@ -37,7 +37,7 @@
 <blockquote>"I so deeply love the way you think... sort of going to these big datasets is encouraging people to not think creatively. So you're -it sort of constrains you to train on these large resources and you think more resources will be a bit better and you start... somehow you kill the creativity." - Lex Fridman paraphrasing Jeremy Howard.</blockquote>
 An example of my favorite type of expert insight, the kind that confirms my prior biases.
 
-Context: from Lex's interview with Jeremy Howard[1], during their discussion of FastAI's winning entries in the DAWNBench competition, which Howard attributes, in part, to their lean computational workflow[2].
+Context: Lex's interview with Jeremy Howard during discussion of FastAI's winning entries in the DAWNBench competition[1][2].
 
 
 <b>Footnotes</b>
