feat(chore): quick update.

--- a/210518_creativity_bottleneck_in_dl/index.html
+++ b/210518_creativity_bottleneck_in_dl/index.html
@@ -32,7 +32,7 @@
 <span class="nbk_comment">by Saeran Vasanthakumar</span>
 <span class="_doc_sep">---</span>
 
-<span class="nbk_directive"><i>21/05/18 - Killing Creativity in DL</i></span>
+<span class="nbk_directive"><i>21/05/18 - The Creativity-killer in DL</i></span>
 
 <blockquote>"I so deeply love the way you think... sort of going to these big datasets is encouraging people to not think creatively. So you're -it sort of constrains you to train on these large resources and you think more resources will be a bit better and you start... somehow you kill the creativity." - Lex Fridman paraphrasing Jeremy Howard.</blockquote>
 An example of my favorite type of expert insight, the kind that confirms my prior biases.
