Tamil causal structure.

--- a/220630_newton_law_cooling/index.html
+++ b/220630_newton_law_cooling/index.html
@@ -38,7 +38,7 @@
 <span class="nbk_comment">by Saeran Vasanthakumar</span>
 <span class="_doc_sep">---</span>
 
-<span class="nbk_directive"><i>22/06/30 - Newton&#39;s Law of Cooling from the Heat Equation</i></span>
+<span class="nbk_directive"><i>22/06/30 - Newton&#39;s Law of Cooling Derivation</i></span>
 
 <div class="skinny_math">
 <b>Spatial energy transfer</b>
