--- a/220701_causality_tamil_grammar/index.html
+++ b/220701_causality_tamil_grammar/index.html
@@ -57,11 +57,16 @@ $$
 \\
 &( \text{ The heat } && &\cdot &\text{ caused } && &\cdot &\text{ a crisis })  \\
 \\
+&( X_1               && &\cdot &\mapsto         && &\cdot &X_2) \\
+\\
 &\textbf{Tamil Single Clause} \\
 \\
 &( \text{ subject } && &\cdot &\text{ object } && &\cdot &\text{ verb }) \\
 \\
 &( \text{ வெப்பம் } && &\cdot &\text{ நெருக்கடியை } && &\cdot &\text{ ஏற்படுத்தியது }) \\
+\\
+&( X_1               && &\cdot &X_2             && &\cdot &\mapsto )
+\\
 &\color{white}((\text{ வெப்பம் } && &\color{white}\cdot &\color{white}\text{ நெருக்கடியை } && &\color{white}\cdot &\color{white}\text{ ஏற்படுத்தியது })
      && &\color{white}\cdot &\color{white}\text{ நெருக்கடிகளை } && &\color{white}\cdot &\color{white}\text{ உருவாக்குகிறது }) \\
 \end{alignat}$$
@@ -93,8 +98,7 @@ $$
 \end{alignat}
 $$
 
-Here we can see how cause and effect is chained in both languages, with the object from the first clause, acting as subject in the second clause, and thus switching from acting as the effect to the cause, respectively.
-In English, every cause is a bridge between related effects. In Tamil, the cause seemingly bridges between the "wrong" effects.
+Here we can see how cause and effect is chained in both languages, with the object from the first clause, acting as subject in the second clause, and thus switching from acting as the effect to the cause, respectively. In English, every cause is a bridge between related effects. In Tamil, the cause seemingly bridges between the "wrong" effects.
 <!-- autoescape off to allow images. Debug why safe filter isn't working
      ref for indent: https://jinja.palletsprojects.com/en/master/templates/#indent -->
 <body>
